app/media-server/tautulli/tautulli-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli
        imagePullPolicy: Always
        # MountVolume.SetUp failed for volume "kube-api-access ca.crt no space left
        # resources:
        #   limits:
        #     memory: 300
        #   requests:
        #     memory: 150
        volumeMounts:
        - mountPath: /config
          name: config
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli
status: {}
