app/media-server/tautulli/tautulli-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8181
  selector:
    app: qbittorrent
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
