app/media-server/tautulli/tautulli-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: tautulli
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: tautulli.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: tautulli
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tautulli.home.adaminformatika.hu
    secretName: tautulli.home.adaminformatika.hu
